[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webview2-com = "0.28.0"
webview2-com-macros = "0.7.0"
webview2-com-sys = "0.28.0"
windows = { version = "0.52.0", features = ["implement"] }
windows-core = { version = "0.52.0", features = ["implement"] }
windows-implement = "0.52.0"
windows-interface = "0.52.0"
